# Lighthouse---Observability-for-LLM-Apps

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: Dockerfile  package.json
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: CostByModel.jsx  CostChart.jsx  LatencyChart.jsx  PromptDiff.jsx  TraceList.jsx
examples/: measure_overhead.py  run_example.py
lighthouse/: __init__.py  pricing.py
lighthouse/capture/: __init__.py  anthropic_wrapper.py  common.py  emitter.py  openai_wrapper.py
lighthouse/metrics/: __init__.py  cost.py  percentiles.py
lighthouse/prompts/: __init__.py
lighthouse/storage/: __init__.py  backend.py  models.py
lighthouse/trace/: __init__.py
server/: main.py
tests/: conftest.py  test_anthropic_wrapper.py  test_cost_attribution.py  test_nonblocking.py  test_percentiles.py  test_prompt_diff.py  test_tracing.py
