[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lighthouse-llm"
version = "0.1.0"
description = "Drop-in observability for LLM apps: traces, cost attribution, latency percentiles, and prompt-version diffing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lighthouse" }]
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
postgres = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["lighthouse*"]
